# insight

./: .env.compose.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  dev-compose.sh  dev-up.sh  docker-compose.yml  ruff.toml
src/backend/: .dockerignore  Cargo.toml  docker-entrypoint.sh
src/backend/libs/authenticator-sdk/: Cargo.toml
src/backend/libs/authenticator-sdk/src/: lib.rs  service_client.rs
src/backend/libs/insight-clickhouse/src/: config.rs  lib.rs
src/backend/plugins/oidc-authn-plugin/src/: module.rs
src/backend/services/analytics/: Cargo.toml  Dockerfile
src/backend/services/analytics-api/: Cargo.toml  Dockerfile
src/backend/services/analytics-api/config/: insight.yaml
src/backend/services/analytics-api/helm/: Chart.yaml  values.yaml
src/backend/services/analytics-api/src/: auth.rs  config.rs  gear.rs  main.rs
src/backend/services/analytics/config/: insight.yaml
src/backend/services/analytics/helm/: Chart.yaml  values.yaml
src/backend/services/analytics/src/: config.rs  gear.rs  main.rs
src/backend/services/api-gateway/: Cargo.toml  Dockerfile
src/backend/services/api-gateway/config/: insight.yaml  no-auth.yaml
src/backend/services/api-gateway/helm/: Chart.yaml
src/backend/services/api-gateway/src/: auth_info.rs  main.rs  proxy.rs  redis_client.rs
src/backend/services/authenticator/: Cargo.toml  Dockerfile
src/backend/services/authenticator/config/: insight.yaml
src/backend/services/authenticator/helm/: Chart.yaml  values.yaml
src/backend/services/authenticator/src/: audit.rs  backchannel.rs  config.rs  cookie.rs  csrf.rs  gear.rs  identity.rs  janitor.rs  jwt.rs  local_client.rs  main.rs  oidc.rs  ratelimit.rs  refresher.rs  service_token.rs  session.rs
src/backend/services/authenticator/tests/: e2e_backchannel.rs  e2e_login_loop.rs  e2e_ratelimit.rs  e2e_refresh.rs  e2e_refresher.rs  e2e_service_token.rs  e2e_sessions.rs  identity-stub.py  run-e2e.sh
src/backend/services/fakeidp/: Cargo.toml  Dockerfile  README.md  users.yaml
src/backend/services/fakeidp/helm/: Chart.yaml  values.yaml
src/backend/services/fakeidp/src/: lib.rs  main.rs
src/backend/services/fakeidp/tests/: boot.rs  flow.rs
src/backend/services/gateway/: Dockerfile  docker-entrypoint.sh
src/backend/services/gateway/helm/: Chart.yaml  values.yaml
src/backend/services/gateway/lua/: errors.lua  gateway.lua
src/backend/services/gateway/tests/: .gitignore  conftest.py  docker-compose.e2e.yml  echo-stub.py  pytest.ini  routes.e2e.yaml  run-e2e.sh  test_gateway.py
src/backend/services/identity/: Directory.Build.props  Dockerfile
src/backend/services/identity-resolution/: Cargo.toml  README.md
src/backend/services/identity-resolution/config/: insight.yaml
src/backend/services/identity-resolution/src/: auth.rs  config.rs  gear.rs  main.rs
src/backend/services/identity/helm/: Chart.yaml  values.yaml
src/backend/services/keycloak/helm/: Chart.yaml  values.yaml
src/backend/tools/routegen/: Cargo.toml
src/backend/tools/routegen/src/: emit.rs  lib.rs  main.rs  schema.rs  validate.rs
src/backend/tools/routegen/tests/: cli.rs  golden.rs
src/ingestion/connectors/ai/github-copilot/: README.md  descriptor.yaml  pyproject.toml
src/ingestion/connectors/git/github-v2/: descriptor.yaml  pyproject.toml
src/ingestion/tests/connectors/: README.md  conftest.py  harness_plugin.py  pyproject.toml
src/ingestion/tests/connectors/connector_tests/: __init__.py  builders.py  fixtures.py  plugin.py  schema_assert.py  source.py
src/ingestion/tests/connectors/meta/: test_harness.py
src/ingestion/tests/e2e/: .gitignore  HOW-TO-ADD-FIXTURE.md  README.md  conftest.py  e2e.sh  pyproject.toml  pytest.ini
src/ingestion/tests/e2e/api/: __init__.py  conftest.py  endpoint_helpers.py  test_admin_thresholds.py  test_catalog.py  test_columns.py  test_metric_results.py  test_metric_thresholds.py  test_metrics.py  test_persons.py  test_session_smoke.py
src/ingestion/tests/e2e/compose/: Dockerfile.runner  docker-compose.cache.yml  docker-compose.runner.yml  docker-compose.yml
src/ingestion/tests/e2e/e2e_lib/: __init__.py  analytics_api.py  ch_seeder.py  clickhouse.py  compose.py  config.py  csv_asserter.py  dbt_runner.py  enrich.py  fixture_loader.py  mariadb.py  metric_seed.py  migration_applier.py  spec_schema.py  worker.py
src/ingestion/tests/e2e/fixtures/: test_fixtures.py
src/ingestion/tests/e2e/lib/: __init__.py  analytics.py  analytics_api.py  api_coverage.py  ch_seeder.py  clickhouse.py  collect_coverage_artifacts.py  collect_metrics.py  compose.py  config.py  dbt_runner.py  enrich.py  expect_engine.py  fixture_loader.py  gateway_jwt.py  identity_stub.py  mariadb.py  metric_coverage.py  metric_seed.py  migration_applier.py  schema_validator.py
src/ingestion/tests/e2e/meta/: test_api_response.py  test_ch_seeder.py  test_ci_workflow.py  test_csv_asserter.py  test_dbt_runner.py  test_expect_engine.py  test_fixture_loader.py  test_ref_resolver.py  test_session_smoke.py  test_snapshot_ci_guard.py
src/ingestion/tests/e2e/metrics/: ai_ai_loc_share2.test.yaml  ai_cc_active.test.yaml  ai_cc_cost.test.yaml  ai_cc_lines.test.yaml  ai_cc_sessions.test.yaml  ai_cc_tool_accept.test.yaml  ai_cc_tool_acceptance.test.yaml  ai_claude_web.test.yaml  ai_cost.test.yaml  ai_cursor_acceptance.test.yaml  ai_prs_total.test.yaml  ai_prs_with_cc.test.yaml  collab_active_days.test.yaml  collab_activity.test.yaml  collab_emails_read.test.yaml  collab_emails_received.test.yaml  collab_emails_sent.test.yaml  collab_files_engaged.test.yaml  collab_files_shared_external.test.yaml  collab_files_shared_internal.test.yaml  collab_meeting_free.test.yaml  collab_meeting_free_days.test.yaml  collab_meeting_hours.test.yaml  collab_meeting_unlicensed_excluded.test.yaml  collab_meetings.test.yaml  collab_meetings_count.test.yaml  collab_messages.test.yaml  collab_messaging_channel_posts.test.yaml  collab_messaging_messages_sent.test.yaml  collab_teams_chats.test.yaml  collab_teams_meeting_hours.test.yaml  collab_teams_meetings.test.yaml  (+27 more)
(+752 files in other folders)
