[workspace]
members = [
    "libs/insight-clickhouse",
    "libs/authenticator-sdk",
    "plugins/oidc-authn-plugin",
    "services/api-gateway",
    "services/analytics",
    "services/authenticator",
    # Dev/e2e-only fake OIDC provider (never shipped in a prod image). See
    # services/fakeidp/README.md and cf/NGINX_BFF.md §10 G6.
    "services/fakeidp",
    # Build-time CLI: compiles the gateway routes.yaml into nginx.conf
    # (gateway DESIGN DD-GW-02). Never shipped in a runtime image.
    "tools/routegen",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Constructor Fabric"]
repository = "https://github.com/constructorfabric/insight"
rust-version = "1.95.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_mut = "warn"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
dbg_macro = "deny"

[workspace.dependencies]
# ClickHouse client
clickhouse = { version = "0.14", features = ["uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
# `Stream` + `StreamExt::next` for driving SeaORM result cursors. Already
# pulled in transitively by sea-orm; declared at workspace scope so
# consumers (today: analytics schema-validator) can use it explicitly
# without leaning on a transitive dep.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Web framework
axum = "0.8"

# Database (MariaDB via SeaORM)
sea-orm = { version = "1.1", features = ["runtime-tokio", "sqlx-mysql", "with-uuid", "with-chrono", "with-json", "macros"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio", "sqlx-mysql"] }

# IDs and time
uuid = { version = "1.19", features = ["serde", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
secrecy = { version = "0.10", features = ["serde"] }

# HTTP client (for Identity Resolution API)
reqwest = { version = "0.12", features = ["json"] }

# Caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# gears-rust toolkit (crates.io, `cf-gears-toolkit-*` family)
# Versions tracked to gears-rust HEAD (the authoritative source); bumped for
# the authenticator gear (nginx+auth step 04).
toolkit = { package = "cf-gears-toolkit", version = "=0.6.13" }
toolkit-auth = { package = "cf-gears-toolkit-auth", version = "=0.7.2" }
toolkit-security = { package = "cf-gears-toolkit-security", version = "=0.7.2" }
toolkit-canonical-errors = { package = "cf-gears-toolkit-canonical-errors", version = "=0.7.4", features = ["axum", "sea-orm"] }

# gears-rust SDKs (crates.io)
authn-resolver-sdk = { package = "cf-gears-authn-resolver-sdk", version = "0.3.18" }
types-registry-sdk = { package = "cf-gears-types-registry-sdk", version = "0.3.0" }

# gears-rust system gears (crates.io)
api_gateway = { package = "cf-gears-api-gateway", version = "0.2.9" }
authn-resolver = { package = "cf-gears-authn-resolver", version = "0.2.18" }
authz-resolver = { package = "cf-gears-authz-resolver", version = "0.1.25" }
tenant-resolver = { package = "cf-gears-tenant-resolver", version = "0.1.22" }
static-authz-plugin = { package = "cf-gears-static-authz-plugin", version = "0.1.21" }
single-tenant-tr-plugin = { package = "cf-gears-single-tenant-tr-plugin", version = "0.1.23" }
grpc_hub = { package = "cf-gears-grpc-hub", version = "0.2.8" }
gear_orchestrator = { package = "cf-gears-gear-orchestrator", version = "0.1.27" }
types_registry = { package = "cf-gears-types-registry", version = "0.1.23" }

# Config
figment = { version = "0.10", features = ["yaml", "env"] }

# Internal crates
insight-clickhouse = { path = "libs/insight-clickhouse" }
authenticator-sdk = { path = "libs/authenticator-sdk" }

# CI rebuild marker — bumped to retrigger the api-gateway + analytics
# image builds on the cf → gears crate migration (2026-06-12).

