[package]
name = "authenticator-sdk"
version = "0.1.0"
description = "Inter-gear contract for the authenticator service — client trait, DTOs, typed error projection. Consumers depend on this crate only, never the impl."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
# Canonical errors cross the boundary like every other gear (toolkit ADR 0005).
toolkit-canonical-errors = { workspace = true }

# ServiceTokenClient: mints RFC 7523 assertions, fetches + caches a service
# token, exposes `bearer()`. Consumers (analytics/background jobs, step 07)
# depend on this crate to obtain a gateway JWT without a user request.
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
# ES256 assertion signing. Workspace dep so the whole tree shares one
# jsonwebtoken version + crypto provider (aws_lc_rs) — v10 panics otherwise.
jsonwebtoken = { workspace = true }
