[package]
name = "analytics"
version = "0.1.0"
description = "Analytics API — read-only query service over predefined ClickHouse metrics"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
insight-clickhouse = { workspace = true }
# Direct `clickhouse` dep is for the `Row` derive on `system.columns` probe
# rows (Refs #521 schema-validator). `insight-clickhouse` wraps the client
# but doesn't re-export the row-deserialization derives.
clickhouse = { workspace = true }

axum = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
# ToolKit host runtime. analytics runs as a gears-rust host: routes are
# declared via `OperationBuilder` and served by the `api-gateway` system gear
# (the REST host) under `toolkit::bootstrap::run_server`. Auth is ENABLED: the
# `oidc-authn-plugin` (cf-gears-oidc-authn-plugin) verifies the ES256 gateway JWT
# against the authenticator's JWKS and maps its claims to a SecurityContext via
# configured claim_mapping (sub→subject_id, tenant_id→subject_tenant_id,
# roles→token_scopes) — no bespoke wrapper (NGINX_BFF R1 / G2).
toolkit = { workspace = true, features = ["bootstrap"] }
toolkit-security = { workspace = true }
toolkit-canonical-errors = { workspace = true }

# System gears linked for the REST host + auth pipeline. Discovered at link time
# via inventory; mirrors the api-gateway service's authenticated gear set.
api_gateway = { workspace = true }
authn-resolver = { workspace = true }
authz-resolver = { workspace = true }
oidc-authn-plugin = { workspace = true }
tenant-resolver = { workspace = true }
single-tenant-tr-plugin = { workspace = true }
static-authz-plugin = { workspace = true }
grpc_hub = { workspace = true }
gear_orchestrator = { workspace = true }
types_registry = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
# OpenAPI schemas for request/response DTOs. Version pinned to 5.5 to match the
# `utoipa::ToSchema` the toolkit (`OperationBuilder::json_request` /
# `json_response_with_schema`) is compiled against (already in Cargo.lock via
# the toolkit). `chrono` + `uuid` features cover the timestamp / UUID fields on
# the DTOs; no `time` types are used here.
utoipa = { version = "5.5", features = ["chrono", "uuid"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
# `tower::ServiceExt::oneshot` for driving the Axum router in the HTTP
# integration tests. Same dev-dep pattern as api-gateway's proxy tests.
tower = { version = "0.5", features = ["util"] }
