[package]
name = "authenticator"
version = "0.1.0"
description = "Authenticator — OIDC login, opaque sessions, and the cookie-to-JWT exchange behind the nginx gateway (BFF / token-handler pattern)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
authenticator-sdk = { workspace = true }

# ToolKit host runtime. The authenticator runs as a gears-rust host: routes are
# declared via `OperationBuilder` and served by the `api-gateway` system gear
# (the REST host) under `toolkit::bootstrap::run_server`. Its own `/auth/*` +
# `/internal/authz` are `.public()` (credential is the session cookie, checked
# in the handler); the admin session-revoke surface (later step) is
# `.authenticated()` and verified by the same authn pipeline as any downstream.
toolkit = { workspace = true, features = ["bootstrap"] }
toolkit-security = { workspace = true }
toolkit-canonical-errors = { workspace = true }

# System gears linked for the REST host + auth pipeline. Discovered at link time
# via inventory; mirrors the analytics service's gear set.
api_gateway = { workspace = true }
authn-resolver = { workspace = true }
authz-resolver = { workspace = true }
tenant-resolver = { workspace = true }
single-tenant-tr-plugin = { workspace = true }
static-authz-plugin = { workspace = true }
grpc_hub = { workspace = true }
gear_orchestrator = { workspace = true }
types_registry = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# OpenAPI schemas for request/response DTOs; version tracks the `utoipa` the
# toolkit's `OperationBuilder` is compiled against (see analytics).
utoipa = { version = "5.5", features = ["chrono", "uuid"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = ["v5"] }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
url = "2.5"
openidconnect = "4"
axum-extra = { version = "0.12", features = ["cookie"] }
time = { workspace = true }

# Crypto: ES256 gateway-JWT minting/verification (§9.6 — ES256: 64-byte
# signatures + fast verify; the downstream `cf-gears-oidc-authn-plugin` verifies
# EC keys natively via jsonwebtoken's JwkSet), JWKS export, PKCE, CSPRNG.
# jsonwebtoken is a workspace dep (one version + one crypto provider, aws_lc_rs,
# across the workspace — v10 panics if two providers are active under feature
# unification). `p256` is also used for the ES256 service-token client
# assertions (RFC 7523), whose keys are the services' own EC identity keys.
jsonwebtoken = { workspace = true }
p256 = { version = "0.14", features = ["pkcs8", "pem", "ecdsa", "getrandom"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
# Parse the dev config in a test so a YAML mistake in the service-token registry
# fails fast, not only at container boot.
serde_yaml = { workspace = true }
