[package]
name = "identity-resolution"
version = "0.1.0"
description = "Identity Resolution — read API (Rust port of the .NET identity service)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# ToolKit host runtime. This service runs as a gears-rust host: routes are
# served by the `api-gateway` system gear (the REST host) under
# `toolkit::bootstrap::run_server`. Auth is ENABLED (NGINX_BFF R1): the
# `oidc-authn-plugin` verifies the ES256 gateway JWT and maps its claims into
# the request SecurityContext — same set as the `analytics` host.
toolkit = { workspace = true, features = ["bootstrap"] }

# System gears linked for the REST host + auth pipeline. Discovered at link time
# via inventory; mirrors the analytics host's authenticated set.
api_gateway = { workspace = true }
authn-resolver = { workspace = true }
oidc-authn-plugin = { workspace = true }
authz-resolver = { workspace = true }
tenant-resolver = { workspace = true }
single-tenant-tr-plugin = { workspace = true }
static-authz-plugin = { workspace = true }
grpc_hub = { workspace = true }
gear_orchestrator = { workspace = true }
types_registry = { workspace = true }

anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }

# Domain gear: config deserialization, async trait impls, HTTP router type,
# and logging. (DB/serde-heavy deps — sea-orm, uuid — land with the DB step.)
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }

# MariaDB via SeaORM — connection pool + entities + raw resolve queries.
sea-orm = { workspace = true }
# UUIDs: person_id / tenant / source ids (binary(16) in the DB).
uuid = { workspace = true }
# Timestamps: `now` for the in-memory 202 body + the zombie-sweep cutoff.
chrono = { workspace = true }

# ClickHouse: read the raw `identity_inputs` stream (persons-seed input source).
# `insight-clickhouse` wraps the client; the direct `clickhouse` dep is for the
# `Row` derive on the query row struct.
insight-clickhouse = { workspace = true }
clickhouse = { workspace = true }

# HTTP surface: tenant SecurityContext, RFC-9457 canonical errors, OpenAPI schemas.
toolkit-security = { workspace = true }
toolkit-canonical-errors = { workspace = true }
# utoipa pinned to match the `ToSchema` the toolkit OperationBuilder compiles against.
utoipa = { version = "5.5", features = ["chrono", "uuid"] }
