[package]
name = "routegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "routegen"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_yaml = "0.9"
url = "2.5"
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
