[project]
name = "insight-e2e"
version = "0.1.0"
description = "Bronze-to-API E2E test framework for Constructor Insight"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
    "cel-python>=0.1.5",
    "clickhouse-connect>=0.7",
    "pymysql>=1.1",
    "httpx>=0.27",
    # Mint ES256 gateway JWTs + a self-signed JWKS/discovery TLS front so the
    # rig runs analytics auth-ENABLED (NGINX_BFF R1); see lib/gateway_jwt.py.
    "pyjwt>=2.8",
    "cryptography>=42",
    "pandas>=2.2",
    "dbt-core>=1.9",
    "dbt-clickhouse>=1.9",
]

[tool.setuptools.packages.find]
include = ["lib*"]
exclude = ["metrics*", "compose*", "seed*", "meta*", "api*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
