[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "source-github-copilot"
version = "0.1.0"
description = "Airbyte source connector for GitHub Copilot Admin API (CDK)"
requires-python = ">=3.10"
dependencies = [
    "airbyte-cdk>=7.16.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
source-github-copilot = "source_github_copilot.source:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["source_github_copilot*"]

[tool.setuptools.package-data]
"source_github_copilot" = ["spec.json"]
